--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Contentstack Field Extension</title>
-  <script src="https://www.contentstack.com/sdks/contentstack-ui-extensions/dist/latest/ui-extension-sdk.js"></script>
-  <link href="https://www.contentstack.com/sdks/contentstack-ui-extensions/dist/1.1.0/ui-extension-sdk.css"
-    rel="stylesheet" type="text/css" media="all">
+  <script src="https://unpkg.com/@contentstack/ui-extensions-sdk@2.2.0/dist/ui-extension-sdk.js"></script>
+  <link href="https://unpkg.com/@contentstack/ui-extensions-sdk@2.2.0/dist/ui-extension-sdk.css" rel="stylesheet" />
   <link href="./style.css" rel="stylesheet" type="text/css" media="all">
   <link href="./bootstrap.css" rel="stylesheet" type="text/css" media="all">
   <script src="https://code.jquery.com/jquery-1.11.1.min.js"
